traversal.snake.Snake.scala.error
Compilation error:
Snake:7: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return (true)
                ^Snake:7: warning: enclosing method testmur has result type Unit: return value discarded
        return (true)
        ^Snake:15: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return (true)
                ^Snake:15: warning: enclosing method testmur has result type Unit: return value discarded
        return (true)
        ^Snake:20: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return (false)
          ^Snake:20: warning: enclosing method testmur has result type Unit: return value discarded
  return (false)
  ^Snake:23: error: value unary_! is not a member of Unit
  while (!testmur()){
         ^