traversal.snake.Snake.scala.code
def testmur(){
  if (estFaceMur()){
    if (getDirection()==Direction.EST){
      gauche()
      if (estFaceMur()){
        droite()
        return (true)
      }
      droite()
    }
    if (getDirection()==Direction.OUEST){
      droite()
      if (estFaceMur()){
        gauche()
        return (true)
      }
      gauche()
    }
  }
  return (false)
}
override def run() {
  while (!testmur()){
    baisseBrosse
    if (estFaceMur){
      if (getDirection()==Direction.EST){
      droite();avance();droite()
    }
      if (getDirection()==Direction.OUEST){
      gauche();avance();gauche()
      }
  }
    else{
      avance()
    }
  }
}